--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,9 @@
 	
 	<div class="flex-container">
 		<div class="rectangle-sub">
-			<h3>sports field reservation</h3>
-			<p>Django app for managing sport fields reservations
-				<br><i>under development</i>
+			<h3><a href="https://github.com/marylaGIS/sport_field_reservation">sport field reservation</a></h3>
+			<p>Django app for managing sport field reservations
+				<br>with the map preview
 			</p>
 		</div>
 		<div class="rectangle-sub">
