qgis plugins main page update

--- a/qgisplugins.html
+++ b/qgisplugins.html
@@ -41,8 +41,8 @@
 
 	<div class="flex-container">
 		<div class="rectangle-sub">
-			<h3><a href="qgisplugins/bdot10k_tools.html">BDOT10k tools</a></h3>
-			<p>plugin for downloading topographic objects data; under development</p>
+			<h3><a href="qgisplugins/bdot10k_tools.html">BDOT10k</a></h3>
+			<p>plugin for downloading topographic objects data</p>
 		</div>
 	</div>
 
