qgis plugins url

--- a/qgisplugins.html
+++ b/qgisplugins.html
@@ -41,7 +41,7 @@
 
 	<div class="flex-container">
 		<div class="rectangle-sub">
-			<h3><a href="qgisplugins/bdot10k_tools.html">BDOT10k</a></h3>
+			<h3><a href="qgisplugins/bdot10k.html">BDOT10k</a></h3>
 			<p>plugin for downloading topographic objects data</p>
 		</div>
 	</div>
