bdot10k plugin page update

--- a/qgisplugins/bdot10k.html
+++ b/qgisplugins/bdot10k.html
@@ -27,14 +27,18 @@
 	
 	<hr><br>
 
-    <div class="flex-container"><b>BDOT10k tools</b></div>
+    <div class="flex-container"><b>BDOT10k</b></div>
+	<br>
+    <div class="flex-container"><p>Wtyczka do pobierania danych <a href="https://www.geoportal.gov.pl/dane/baza-danych-obiektow-topograficznych-bdot">BDOT10k</a> bezpośrednio z QGISa.</p>
+	</div>
     <br>
     <div class="flex-container"><p>Plugin for downloading <a href="https://www.geoportal.gov.pl/dane/baza-danych-obiektow-topograficznych-bdot">BDOT10k</a> data directly from QGIS.</p>
 	</div>
     <br>
-    <div class="flex-container"><img src="img/bdot10ktools1.png"></div>
+    <div class="flex-container"><img src="img/bdot10k.png"></div>
     <br>
-	<div class="flex-container"><p>plugin under development</p></div>
+	<div class="flex-container"><a href="https://github.com/marylaGIS/bdot10k
+	" target="_blank">plugin repository</a></div>
     <br>
 
 <script>
