--- a/webmaps.html
+++ b/webmaps.html
@@ -43,6 +43,13 @@
 		</div>
 	</div>
 	
+	<div class="flex-container">
+		<div class="rectangle-sub">
+			<h3><a href="webmaps/citiesonlines/index.html">cities-climate around the world</a></h3>
+			<p>compare the city's location in the other hemisphere and the corresponding climate zone</p>
+		</div>
+	</div>
+	
 <script>
 </script>
 </body>
